# pms-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: .gitkeep  056808cbd83f_initial_schema.py  05bceea7eecc_add_kpi_variables_and_variable_actuals.py  1811d467c578_create_kpi_tables.py  4f0457820297_merge_kpi_and_scoring_branches.py  7a3138160dbf_add_kpi_scoring_configs_and_overrides.py  8c420a93904d_create_targets_actuals_review_cycles_.py  a1b2c3d4e5f6_seed_initial_data.py  b2c3d4e5f6a7_add_username_to_users.py  c3d4e5f6a7b8_create_scoring_tables.py  d4e5f6a7b8c9_create_notification_tables.py
app/: config.py  database.py  dependencies.py  exceptions.py  main.py  middleware.py  utils.py
app/actuals/: __init__.py  enums.py  models.py  router.py  schemas.py  service.py
app/auth/: router.py  schemas.py  service.py  utils.py
app/dashboards/: __init__.py  router.py  schemas.py  service.py
app/integrations/: adapter_registry.py  data_sync_service.py  enums.py  models.py  router.py  schemas.py
app/kpis/: __init__.py  enums.py  formula.py  models.py  router.py  schemas.py  seeds.py  service.py
app/notifications/: __init__.py  enums.py  models.py  router.py  schemas.py  service.py  templates.py
app/organisations/: models.py  router.py  schemas.py  (+1 more)
tests/: conftest.py  test_actuals.py  test_auth.py  test_dashboards.py  test_formula_evaluator.py  test_kpi_scoring_config.py  test_kpis.py  test_notifications.py  test_scoring.py  test_targets.py  test_tasks.py  test_users.py
(+85 files in other folders)
